# DocuMon

./: README.md  pyproject.toml
DocuMon/: __init__.py
DocuMon/core/: cmds.py  extractor.py  types.py
DocuMon/core/elements/: __init__.py  default_class.py  default_function.py  default_method.py  default_object.py  module.py
DocuMon/core/printers/: MdFile.py  __init__.py  default_printer.py
DocuMon/core/utils/: reader.py
example/: README.md  __init__.py  example.md  example_py.py  run.py
